--- a/app/src/main/res/values/strings_scouting.xml
+++ b/app/src/main/res/values/strings_scouting.xml
@@ -12,7 +12,7 @@
         <item>1. Not Parked</item>
         <item>2. Parked</item>
         <item>3. Onstage</item>
-        <item>4. Onstage w/ Budy</item>
+        <item>4. Onstage w/ Buddy</item>
         <item>5. Onstage w/ 2 Buddies</item>
     </string-array>
 
