--- a/app/src/main/res/layout/fragment_scout_autonomous.xml
+++ b/app/src/main/res/layout/fragment_scout_autonomous.xml
@@ -263,7 +263,7 @@
     </LinearLayout>
 
     <org.wildstang.wildrank.androidv2.views.scouting.ScoutingCheckboxView
-        app:key="auto_move"
+        app:key="CrossLine"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         app:label="Exited Robot\nStarting Zone"
