Added Traps to Summaries
Also added camera button in pit scouting to begin taking photos in the app

--- a/app/src/main/res/layout/fragment_scout_pit.xml
+++ b/app/src/main/res/layout/fragment_scout_pit.xml
@@ -129,6 +129,12 @@
             app:label="EndGame"
             app:values="@array/EndGame" />
 
+        <Button
+            android:id="@+id/CameraButton"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:text="Camera"
+            />
     </LinearLayout>
 
     <LinearLayout
