Removed some redundancies, after continued testing it seems that the outside frame of the buttons is the actual button part that runs the onClick method (need to fix), once there was more than at least one data point program froze, maybe due to long values taking up too much memory? (need to figure out fix)

--- a/app/src/main/res/layout/fragment_summaries_data_window.xml
+++ b/app/src/main/res/layout/fragment_summaries_data_window.xml
@@ -24,7 +24,11 @@
             android:textStyle="bold"
             android:text="Auto Overview" />
 
-
+        <org.wildstang.wildrank.androidv2.views.data.crescendo.match.MatchDataAutoPath
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:explanation="The general path of the robot's auton"
+            app:label="Path" />
 
         <org.wildstang.wildrank.androidv2.views.data.crescendo.match.MatchDataAutoCrossedLine
             android:layout_width="match_parent"
