Removed redundancies, slight improving of auton and teleop screens

--- a/app/src/main/res/drawable/outline_background.xml
+++ b/app/src/main/res/drawable/outline_background.xml
@@ -8,4 +8,7 @@
 
     </stroke>  <!-- Adjust the width of the outline as needed -->
        <!-- Adjust the color of the outline as needed -->
+    <solid
+        android:color="@color/gray"
+        />
 </shape>
