--- a/app/src/main/res/layout/custom_view_button.xml
+++ b/app/src/main/res/layout/custom_view_button.xml
@@ -14,6 +14,11 @@
         android:focusableInTouchMode="true"
         android:padding="0dp">
 
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="@drawable/yellow50x50button"/>
+
         <Button
             android:id="@+id/button"
             android:layout_width="fill_parent"
