--- a/app/src/main/res/layout/fragment_scout_post_match.xml
+++ b/app/src/main/res/layout/fragment_scout_post_match.xml
@@ -7,6 +7,15 @@
     android:background="#2C2C2C"
     >
 
+    <TextView
+        android:id="@+id/EndgameTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Endgame"
+        android:textSize="60sp"
+        android:textColor="#FFFFFF"
+        android:layout_centerHorizontal="true" />
+
     <LinearLayout
         android:id="@+id/notes"
         android:layout_width="1250dp"
@@ -40,7 +49,7 @@
         app:label="Stage"
         app:values="@array/staging"
         android:layout_above="@+id/notes"
-        android:layout_marginBottom="25dp"
+        android:layout_marginBottom="20dp"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="20dp"
         />
@@ -52,7 +61,7 @@
         app:label="High Notes:"
         app:values="@array/high_notes"
         android:layout_above="@+id/notes"
-        android:layout_marginBottom="25dp"
+        android:layout_marginBottom="20dp"
         android:layout_alignParentRight="true"
         android:layout_marginRight="20dp"
         />
