--- a/app/src/main/res/layout/fragment_scout_pit.xml
+++ b/app/src/main/res/layout/fragment_scout_pit.xml
@@ -57,6 +57,13 @@
             app:label="Scorable Pieces"
             app:values="@array/scorable" />
 
+        <org.wildstang.wildrank.androidv2.views.scouting.ScoutingSpinnerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:key="Shoot_Height"
+            app:label="Shooter Height"
+            app:values="@array/Shooter_Height" />
+
     </LinearLayout>
 
     <LinearLayout
